fix z-index of slideshow button

--- a/responsive.css
+++ b/responsive.css
@@ -85,6 +85,7 @@
             user-select: none;
     -webkit-transition: 0.2s;
     transition: 0.2s;
+    z-index: 10;
   }
   #mainContent #articleImg .btn span {
     color: var(--color2rgb);
